@@ -1,3 +1,12 @@
+2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline
+	2011-05-24  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/49128
+	* config/i386/driver-i386.c (host_detect_local_cpu): Always
+	add -mno-XXX.  Handle FMA.
+
 2011-05-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR lto/49123
